workloads/onchain-monitor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onchain-monitor
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    linkerd.io/inject: enabled
